---------------------------------------------------------------------------------------------------
Version: 4.1.14
Date: ????
  Features:
    - Added ItemGen:setItemPictures()
  Bugfixes:
    - Fixed that setBurner() did not remove Module Slots
    - Fixed that BuildGen:import() set a default working_sound when the imported entity had none
---------------------------------------------------------------------------------------------------
Version: 4.1.13
Date: 2021.07.21
  Features:
    - Added omni.lib.alpha(alphabet_position) which returns the corresponding lettter as string
    - Added omni.lib.recipe_is_enabled(recipename)
  Bugfixes:
    - Multiple fixes, typos and fallbacks in recipe generation
    - Fixed that certain settings were not forced properly
    - Fixed omni.lib.hide_setting() not properly forcing bool settings to false
---------------------------------------------------------------------------------------------------
Version: 4.1.12
Date: 2021.06.20
  Features:
    - Added setEmmisions() to set emmision_per_minute for entities
  Bugfixes:
    - Fixed omni.lib.replace_recipe_result() crashing with amount_min and amount_max recipes
    - Fixed omni.lib.multiply_recipe_result() crashing with amount_min and amount_max recipes
---------------------------------------------------------------------------------------------------
Version: 4.1.11
Date: 2021.06.04
  Changes:
    - Recipe standardisation now nils empty main_product strings to avoid errors in recipe gen.
---------------------------------------------------------------------------------------------------
Version: 4.1.10
Date: 2021.03.11
  Bugfixes:
    - Fixed a concat typo in omni.lib.add_science_pack() causing a crash in rare cases
---------------------------------------------------------------------------------------------------
Version: 4.1.9
Date: 2021.03.08
  Info:
    - Moved Angels component mode "omniblocks" from lib to matter
  Bugfixes: