@@ -3,6 +3,9 @@ Version: 4.1.14
 Date: ????
   Features:
     - Added ItemGen:setItemPictures()
+  Changes:
+    - setBurner() does not automatically add "burner-" infront of the proto name
+    - setSteam() does not automatically add "steam-" infront of the proto name
   Bugfixes:
     - Fixed that setBurner() did not remove Module Slots
     - Fixed that BuildGen:import() set a default working_sound when the imported entity had none
